Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14681

Bogus ER_UNSUPPORTED_EXTENSION (Table uses an extension that doesn't exist in this MariaDB version)

    XMLWordPrintable

Details

    Description

      CREATE OR REPLACE TABLE t1 (pk INT AUTO_INCREMENT PRIMARY KEY, c VARCHAR(8)) ENGINE=MyISAM WITH SYSTEM VERSIONING;
      INSERT INTO t1 VALUES (1,'foo');
      DELETE FROM t1;
      ALTER TABLE t1 ENGINE=MyISAM;
      

      ERROR 1112 (42000): Table '#sql-17fe_b' uses an extension that doesn't exist in this MariaDB version
      

      Also reproducible with Aria.

      This variation causes the same problem with InnoDB:

      CREATE OR REPLACE TABLE t1 (pk INT AUTO_INCREMENT PRIMARY KEY, c VARCHAR(8), FULLTEXT(c)) ENGINE=InnoDB WITH SYSTEM VERSIONING;
      INSERT INTO t1 VALUES (1,'foo');
      DELETE FROM t1;
      ALTER TABLE t1 ENGINE=InnoDB;
      

      Attachments

        Issue Links

          Activity

            People

              kevg Eugene Kosov (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - Not Specified
                  Not Specified
                  Logged:
                  Time Spent - 20m
                  20m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.