MDEV-14681 Bogus ER_UNSUPPORTED_EXTENSION (Table uses an extension that doesn't exist in this MariaDB version)